--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,8 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat.NoActionBar">
+        android:theme="@style/AppTheme">
+        <!--android:theme="@style/Theme.AppCompat.NoActionBar">-->
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -15,6 +16,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".CheckGroupActivity"></activity>
+        <activity android:name=".CheckPersonActivity"></activity>
+        <activity android:name=".PayActivity"></activity>
+        <activity android:name=".ThanksActivity"></activity>
     </application>
 
 </manifest>
