--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,8 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <!--android:theme="@style/Theme.AppCompat.NoActionBar">-->
+
+        <!-- android:theme="@style/Theme.AppCompat.NoActionBar"> -->
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -16,10 +17,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".CheckGroupActivity"></activity>
-        <activity android:name=".CheckPersonActivity"></activity>
-        <activity android:name=".PayActivity"></activity>
-        <activity android:name=".ThanksActivity"></activity>
+        <activity android:name=".CheckGroupActivity" />
+        <activity android:name=".CheckPersonActivity" />
+        <activity android:name=".PayActivity" />
+        <activity android:name=".ThanksActivity" />
+        <activity android:name=".Paypal"></activity>
     </application>
 
 </manifest>
