--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,4 +24,5 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.paypal.sdk:paypal-android-sdk:2.14.1'
+    compile 'com.firebase:firebase-client-android:2.5.2+'
 }
